; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_html.c_write_octet_sequence.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_html.c_write_octet_sequence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32, i32)* @write_octet_sequence to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @write_octet_sequence(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %25 [
    i32 128, label %9
    i32 141, label %13
    i32 135, label %13
    i32 140, label %13
    i32 131, label %13
    i32 136, label %13
    i32 139, label %13
    i32 134, label %13
    i32 130, label %13
    i32 138, label %17
    i32 137, label %17
    i32 129, label %17
    i32 132, label %17
    i32 133, label %21
  ]

9:                                                ; preds = %3
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i64 @php_utf32_utf8(i8* %10, i32 %11)
  store i64 %12, i64* %4, align 8
  br label %27

13:                                               ; preds = %3, %3, %3, %3, %3, %3, %3, %3
  %14 = load i32, i32* %7, align 4
  %15 = trunc i32 %14 to i8
  %16 = load i8*, i8** %5, align 8
  store i8 %15, i8* %16, align 1
  store i64 1, i64* %4, align 8
  br label %27

17:                                               ; preds = %3, %3, %3, %3
  %18 = load i32, i32* %7, align 4
  %19 = trunc i32 %18 to i8
  %20 = load i8*, i8** %5, align 8
  store i8 %19, i8* %20, align 1
  store i64 1, i64* %4, align 8
  br label %27

21:                                               ; preds = %3
  %22 = load i32, i32* %7, align 4
  %23 = trunc i32 %22 to i8
  %24 = load i8*, i8** %5, align 8
  store i8 %23, i8* %24, align 1
  store i64 1, i64* %4, align 8
  br label %27

25:                                               ; preds = %3
  %26 = call i32 @assert(i32 0)
  store i64 0, i64* %4, align 8
  br label %27

27:                                               ; preds = %25, %21, %17, %13, %9
  %28 = load i64, i64* %4, align 8
  ret i64 %28
}

declare dso_local i64 @php_utf32_utf8(i8*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
